--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,3 +3,24 @@ resolver = "3"
 members = ["carcosa/src-tauri"]
 
 [workspace.dependencies]
+anyhow = "1.0.100"
+bon = "3.8.2"
+chrono = "0.4.43"
+getset = "0.1.6"
+native_db = "0.8.2"
+native_model = "0.6.2"
+parking_lot = "0.12.5"
+serde = "1"
+serde_json = "1"
+specta = "=2.0.0-rc.22"
+specta-typescript = "0.0.9"
+tauri = "2"
+tauri-build = "2"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
+taurpc = "0.6.0"
+thiserror = "2.0.18"
+tokio = "1.49.0"
+uuid = "1.20.0"
+axum = "0.8.8"
+platform-dirs = "0.3.0"
