--- a/carcosa/package.json
+++ b/carcosa/package.json
@@ -10,17 +10,43 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@mantine/charts": "^8.3.13",
+    "@mantine/core": "^8.3.13",
+    "@mantine/dropzone": "^8.3.13",
+    "@mantine/form": "^8.3.13",
+    "@mantine/hooks": "^8.3.13",
+    "@mantine/modals": "^8.3.13",
+    "@mantine/notifications": "^8.3.13",
+    "@mantine/spotlight": "^8.3.13",
+    "@mantine/tiptap": "^8.3.13",
+    "@tauri-apps/api": "^2",
+    "@tauri-apps/plugin-dialog": "~2.6.0",
+    "@tauri-apps/plugin-fs": "~2.4.5",
+    "@tiptap/extension-link": "^3.18.0",
+    "@tiptap/pm": "^3.18.0",
+    "@tiptap/react": "^3.18.0",
+    "@tiptap/starter-kit": "^3.18.0",
+    "axios": "^1.13.4",
+    "clsx": "^2.1.1",
+    "mantine-contextmenu": "^8.3.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@tauri-apps/api": "^2",
-    "@tauri-apps/plugin-opener": "^2"
+    "react-icons": "^5.5.0",
+    "react-router": "^7.13.0",
+    "recharts": "^3.7.0",
+    "taurpc": "^1.8.1"
   },
   "devDependencies": {
+    "@tauri-apps/cli": "^2",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
+    "postcss": "^8.5.6",
+    "postcss-preset-mantine": "^1.18.0",
+    "postcss-simple-vars": "^7.0.1",
+    "sass": "^1.97.3",
+    "sass-embedded": "^1.97.3",
     "typescript": "~5.8.3",
-    "vite": "^7.0.4",
-    "@tauri-apps/cli": "^2"
+    "vite": "^7.0.4"
   }
 }
