--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,6 @@ anyhow = "1.0.100"
 bon = "3.8.2"
 chrono = "0.4.43"
 getset = "0.1.6"
-native_db = "0.8.2"
-native_model = "0.6.2"
 parking_lot = "0.12.5"
 serde = "1"
 serde_json = "1"
@@ -24,3 +22,6 @@ tokio = "1.49.0"
 uuid = "1.20.0"
 axum = "0.8.8"
 platform-dirs = "0.3.0"
+fern = "0.7.1"
+log = "0.4.29"
+redb = "3.1.0"
