--- a/carcosa/package.json
+++ b/carcosa/package.json
@@ -10,6 +10,8 @@
     "tauri": "tauri"
   },
   "dependencies": {
+    "@fontsource-variable/atkinson-hyperlegible-mono": "^5.2.5",
+    "@fontsource-variable/atkinson-hyperlegible-next": "^5.2.6",
     "@mantine/charts": "^8.3.13",
     "@mantine/core": "^8.3.13",
     "@mantine/dropzone": "^8.3.13",
